# swayipc-rs

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
async/: Cargo.toml  README.md
async/src/: common.rs  connection.rs  event.rs  lib.rs  runtime.rs  socket.rs  tests.rs
async/src/runtime/: async_io.rs  tokio.rs
blocking/: Cargo.toml  README.md
blocking/src/: common.rs  connection.rs  event.rs  socket.rs  tests.rs
examples/: command_builder.rs  command_loop_async.rs  event_printer_async.rs  hovered_window_async.rs
examples/command_loop/: Cargo.toml
examples/command_loop/src/: main.rs
examples/command_loop_async/: Cargo.toml
examples/command_loop_async/src/: main.rs
examples/command_loop_async_std/: Cargo.toml
examples/command_loop_async_std/src/: main.rs
examples/event_printer/: Cargo.toml
examples/event_printer/src/: main.rs
examples/event_printer_async/: Cargo.toml
examples/event_printer_async/src/: main.rs
examples/event_printer_async_event_stream/: Cargo.toml
examples/event_printer_async_event_stream/src/: main.rs
examples/event_printer_tokio/: Cargo.toml
examples/event_printer_tokio/src/: main.rs
examples/hovered_window/: Cargo.toml
examples/hovered_window/src/: main.rs
examples/hovered_window_async/: Cargo.toml
examples/hovered_window_async/src/: main.rs
examples/hovered_window_futures_lite/: Cargo.toml
examples/hovered_window_futures_lite/src/: main.rs
src/: command.rs  event.rs  lib.rs  reply.rs  socket.rs  tests.rs
src/command_builder/: builder.rs  command.rs  filter.rs  fullscreen.rs  mod.rs  states.rs  sway_move.rs  tests.rs
src/command_builder/commands/: border.rs  default_border.rs  floating.rs  floating_modifier.rs  floating_size.rs  focus_follows_mouse.rs  focus_on_window_activation.rs  focus_wrapping.rs  fullscreen.rs  gaps.rs  hide_edge_borders.rs  inhibit_idle.rs  layout.rs  mark.rs  max_render_time.rs  mod.rs  mouse_wraping.rs  opacity.rs  popup_during_fullscreen.rs  rename.rs  scratchpad.rs  shortcuts_inhibitor.rs  show_marks.rs  smart_borders.rs  smart_gaps.rs  split.rs  sticky.rs  swap.rs  sway_move.rs  tiling_drag.rs  title_align.rs  titlebar_padding.rs  unbindswitch.rs  unmark.rs  urgent.rs  workspace.rs  workspace_auto_back_and_forth.rs
src/not_sync/: common.rs  connection.rs  event.rs  event_stream.rs  mod.rs  socket.rs  tests.rs
src/sync/: common.rs  connection.rs  event.rs  mod.rs  socket.rs  tests.rs
types/: Cargo.toml  README.md
types/src/: command.rs  event.rs  lib.rs  reply.rs
types/src/error/: command_outcome.rs  command_type.rs  event.rs  mod.rs
types/src/utils/: event.rs  mod.rs  node.rs  serde.rs
