[package]
name = "swayipc"
version = "2.4.5"
authors = ["Jayce Fayne <jayce.fayne@mailbox.org>"]
edition = "2018"
description = "A library for controlling sway through its IPC interface"
license = "MIT"
repository = "https://github.com/jaycefayne/swayipc-rs"
categories = ["asynchronous", "concurrency", "network-programming"]
keywords = ["sway", "swaywm", "swayipc","ipc", "async"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1"
futures-core = { version = "0.3", optional = true }
async-std = { version = "1.5", features = ["attributes"], optional = true }

[features]
async = ["async-std"]
event_stream = ["futures-core"]
