[package]
name = "swayipc-async"
version = "3.0.0"
authors = ["Jayce Fayne <jayce.fayne@mailbox.org>"]
edition = "2024"
description = "A library for controlling sway through its IPC interface"
license = "MIT"
repository = "https://github.com/jaycefayne/swayipc-rs"
categories = ["network-programming"]
keywords = ["sway", "swaywm", "swayipc", "ipc", "async"]
readme = "README.md"

[dependencies]
swayipc-types = { version = "2", path = "../types" }
serde = "1"
serde_json = "1"
async-io = "2"
futures-lite = "2"
async-pidfd = "0.1.5"
