[package]
name = "swayipc"
version = "2.7.2"
authors = ["Jayce Fayne <jayce.fayne@mailbox.org>"]
edition = "2018"
description = "A library for controlling sway through its IPC interface"
license = "MIT"
repository = "https://github.com/jaycefayne/swayipc-rs"
categories = ["network-programming"]
keywords = ["sway", "swaywm", "swayipc","ipc"]
readme = "README.md"

[dependencies]
swayipc-types = { version = "1.0.0-alpha", path = "../types" }
serde = "1.0.117"
serde_json = "1.0.59"
