[package]
name = "swayipc"
version = "3.0.1"
authors = ["Jayce Fayne <jayce.fayne@mailbox.org>"]
edition = "2021"
description = "A library for controlling sway through its IPC interface"
license = "MIT"
repository = "https://github.com/jaycefayne/swayipc-rs"
categories = ["network-programming"]
keywords = ["sway", "swaywm", "swayipc", "ipc"]
readme = "README.md"

[dependencies]
swayipc-types = { version = "1", path = "../types" }
serde = "1"
serde_json = "1"
