[package]
name = "swayipc-types"
version = "1.0.0-alpha.2"
authors = ["Jayce Fayne <jayce.fayne@mailbox.org>"]
edition = "2018"
description = "A library containing Type defintions from sway's IPC interface"
license = "MIT"
repository = "https://github.com/jaycefayne/swayipc-rs"
categories = ["network-programming"]
keywords = ["sway", "swaywm", "swayipc","ipc"]
readme = "README.md"

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.60"
thiserror = { version =  "1.0.22", optional = true }

[features]
default = ["error"]
error = ["thiserror"]